[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/controls/centered_panel.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/fonts/main_font_l.tres" type="DynamicFont" id=2]
[ext_resource path="res://src/controls/full_screen_panel.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/controls/screens/data_agreement_screen.gd" type="Script" id=4]
[ext_resource path="res://src/controls/nav_bar.tscn" type="PackedScene" id=12]

[node name="DataAgreementScreen" type="Node2D"]
script = ExtResource( 4 )

[node name="FullScreenPanel" parent="." instance=ExtResource( 3 )]
margin_right = 480.0
margin_bottom = 480.0

[node name="VBoxContainer" type="VBoxContainer" parent="FullScreenPanel"]
margin_right = 480.0
margin_bottom = 529.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 8.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NavBar" parent="FullScreenPanel/VBoxContainer" instance=ExtResource( 12 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 480.0
margin_bottom = 45.0
text = "Accept terms"
shows_back = false

[node name="CenteredPanel" parent="FullScreenPanel/VBoxContainer" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 49.0
margin_right = 480.0
margin_bottom = 529.0
stretches_vertically = true

[node name="ScrollContainer" type="ScrollContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel"]
margin_right = 480.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="CenterContainer" type="CenterContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer"]
margin_right = 480.0
margin_bottom = 480.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer"]
margin_left = 80.0
margin_top = 44.0
margin_right = 400.0
margin_bottom = 435.0
rect_min_size = Vector2( 280, 0 )

[node name="VBoxContainer" type="VBoxContainer" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 239.0

[node name="Label" type="Label" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 320.0
margin_bottom = 152.0
rect_min_size = Vector2( 320, 0 )
text = "By using this app, you agree to our Terms & Conditions and Privacy Policy.

Visit the following links for details:"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer"]
margin_left = 160.0
margin_top = 156.0
margin_right = 160.0
margin_bottom = 166.0
rect_min_size = Vector2( 0, 10 )
size_flags_horizontal = 4

[node name="TermsAndConditionsLink" type="LinkButton" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer"]
margin_left = 68.0
margin_top = 170.0
margin_right = 252.0
margin_bottom = 198.0
size_flags_horizontal = 4
text = "Terms & Conditions"

[node name="Spacer2" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer"]
margin_left = 160.0
margin_top = 202.0
margin_right = 160.0
margin_bottom = 207.0
rect_min_size = Vector2( 0, 5 )
size_flags_horizontal = 4

[node name="PrivacyPolicyLink" type="LinkButton" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer"]
margin_left = 97.0
margin_top = 211.0
margin_right = 222.0
margin_bottom = 239.0
size_flags_horizontal = 4
text = "Privacy Policy"

[node name="Spacer3" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 160.0
margin_top = 243.0
margin_right = 160.0
margin_bottom = 293.0
rect_min_size = Vector2( 0, 50 )
size_flags_horizontal = 4
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AgreeButton" type="Button" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 60.0
margin_top = 297.0
margin_right = 260.0
margin_bottom = 357.0
rect_min_size = Vector2( 200, 60 )
size_flags_horizontal = 4
custom_fonts/font = ExtResource( 2 )
text = "I agree"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer4" type="Control" parent="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer"]
margin_left = 160.0
margin_top = 361.0
margin_right = 160.0
margin_bottom = 391.0
rect_min_size = Vector2( 0, 30 )
size_flags_horizontal = 4
size_flags_vertical = 3
[connection signal="pressed" from="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer/TermsAndConditionsLink" to="." method="_on_TermsAndConditionsLink_pressed"]
[connection signal="pressed" from="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/VBoxContainer/PrivacyPolicyLink" to="." method="_on_PrivacyPolicyLink_pressed"]
[connection signal="pressed" from="FullScreenPanel/VBoxContainer/CenteredPanel/ScrollContainer/CenterContainer/VBoxContainer/AgreeButton" to="." method="_on_AgreeButton_pressed"]
